# dajngo-job-board

./: .gitignore  MANIFEST.in  README.md  README.rst  setup.cfg
job_board/: decorators.py  models.py  tasks.py  urls.py  views.py
job_board/admin/: __init__.py  assessment_admin.py  candidate_admin.py  job_admin.py
job_board/apis/: assessment.py  authentication.py  job.py
job_board/auth/: CandidateAuth.py
job_board/migrations/: 0001_initial.py  0002_job_assessment.py  0003_alter_job_assessment.py  0004_auto_20210629_1947.py  0005_auto_20210702_1224.py  0006_auto_20210714_1333.py  0007_auto_20210714_1637.py  0008_resetpassword.py  0009_jobadditionalfield.py  0010_auto_20210720_1942.py  0011_alter_candidatejob_step.py  0012_alter_candidatejob_step.py  0013_candidateassessmentanswer.py  0014_candidateassessmentanswer_candidate_job.py  0015_candidateassessment.py  0016_auto_20210724_2250.py  0017_auto_20210724_2306.py  0018_auto_20210724_2332.py  0019_auto_20210725_1648.py  0020_remove_candidateassessment_exam_type.py  0021_alter_candidateassessment_assessment.py  0022_auto_20210725_1700.py  0023_assessment_pass_score.py  0024_alter_assessment_description.py  0025_assessment_open_to_start.py  0026_auto_20210727_2234.py  0027_auto_20210728_1546.py  0028_remove_assessment_score.py  0029_rename_pass_score_assessment_pass_percentage.py  0030_candidateassessment_can_open_after.py  0031_rename_can_open_after_candidateassessment_can_start_after.py
job_board/serializers/: assessment_serializer.py  candidate_serializer.py  job_serializer.py  password_reset.py
job_board/templates/admin/assessment/: preview.html
job_board/templates/admin/assessment_question/: form.html
job_board/templates/admin/candidate/: custom_candidate_form.html
job_board/templates/webpage/: index.html
job_board/templates/website/: index.html
