[metadata]
name = django-job-board
version = 0.1
description = A Django app to conduct job board.
long_description = file: README.rst
url = https://www.mediusware.com
author = Your Name
author_email = kmrifat@mediusware.com
license = BSD-3-Clause  # Example license
keywords = "django job board",
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.*  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.*
    djangorestframework == 3.*
    django-userforeignkey >= 0.3.*
    pyjwt >= 2.*
    pillow >= 8.*
    django-tinymce >= 3.3.*